--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -92,7 +92,7 @@ main {
       flex-flow: column nowrap;
       align-items: center;
       justify-content: space-evenly;
-      background:url("../images/papper3.png") no-repeat 100% 50%;
+      background: url("../images/papper3.png") no-repeat 100% 50%;
       background-size: 60%;
       & .about__title--container {
         height: 25vh;
@@ -102,13 +102,13 @@ main {
         color: rgb(163, 139, 139, 0.872);
         letter-spacing: 2px;
       }
-      & .about__txt--description{
+      & .about__txt--description {
         font-family: "Roboto Flex", sans-serif;
         font-size: 1.2rem;
         width: 90ch;
-        color: rgb(163, 139, 139, 0.872);
+        color: #000;
+        backdrop-filter: blur(5px);
         letter-spacing: 1px;
-   
       }
     }
   }
@@ -118,16 +118,25 @@ main {
     align-items: center;
     justify-content: space-evenly;
     & .gallery__item {
-      height: 40vh;
-      width: 45vw;
+      height: 30vh;
+      width: 35vw;
       display: flex;
       flex-flow: row nowrap;
       align-items: center;
       justify-content: space-around;
       overflow: hidden;
-      background: rgba(163, 139, 139, 0.872) url("../images/papper2.png")
-        no-repeat 50% 50%;
+      background: rgba(163, 139, 139, 0.872)
+        url("../images/papper2_white_lines.png") no-repeat 50% 50%;
       background-size: cover;
+      border-radius: 10px;
+      & .gallery__item--txt {
+        width: 25ch;
+        font-size: 1.2rem;
+        color: #000;
+        letter-spacing: 1px;
+        font-family: "Roboto Flex", sans-serif;
+        text-shadow: 0px 0px 2px #000;
+      }
       & .gallery__item--sub-container {
         height: auto;
         width: 20vw;
@@ -136,9 +145,19 @@ main {
         align-items: center;
         justify-content: center;
         & picture {
-          height: 25vh;
-          width: 35vw;
+          height: 20vh;
+          width: 20vw;
           overflow: hidden;
+          border-radius: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          & img {
+            height: auto;
+            width: 20vw;
+            border-radius: 10px;
+            filter: contrast(140%);
+          }
         }
       }
     }
