--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -41,6 +41,7 @@ header {
     background: rgba(163, 139, 139, 0.872) url("../images/papper5.png")
       no-repeat 0% 80%;
     background-size: 37%;
+    z-index: 99;
     & .header__nav--ul {
       height: auto;
       width: 100%;
@@ -60,6 +61,30 @@ header {
       }
     }
   }
+}
+.back__to-top {
+  height: 50px;
+  width: 50px;
+  background: rgba(163, 139, 139, 0.872);
+  position: fixed;
+  margin-top: 20%;
+  margin-left: 95%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+  border-radius: 20px;
+  text-decoration: none;
+  & i {
+    font-size: 1.2rem;
+    color: #000;
+  }
+}
+.back__to-top:hover {
+  transition: 0.3s ease-in-out;
+ cursor: pointer;
+ filter: drop-shadow(0px 0px 3px #000);
 }
 main {
   display: flex;
@@ -217,13 +242,48 @@ main {
             border: 0.5px solid #000;
           }
         }
+        & textarea {
+          margin: 3px;
+          height: auto;
+          width: 50%;
+          resize: none;
+          border-radius: 5px;
+        }
+        & input[type="submit"] {
+          margin: 3px;
+          height: 3vh;
+          width: auto;
+          border-radius: 5px;
+          border: 0.5px solid #000;
+        }
+        & input[type="submit"]:hover {
+          transition: 0.3s ease-in-out;
+          background-color: #000;
+          color: #fff;
+        }
       }
     }
   }
 }
 footer {
   position: relative;
+  top: 4vh;
   bottom: 0;
   min-height: 15vh;
   width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: rgba(163, 139, 139, 0.872);
+  & .footer__signature--container {
+    height: auto;
+    width: 80%;
+    & small {
+      font-size: 0.8rem;
+      color: #fff;
+      letter-spacing: 2px;
+      font-family: "Roboto Flex", sans-serif;
+    }
+  }
 }
